--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <footer class="footer-bg">
         <div class="footer">
             <h2><span class="orange">FOOD</span>  NETWORT</h2>
-            <p> &copy; All Right by - Md. Shoriful Islam</p>
+            <p> &copy; All Right by - Mst. Reba Khatun</p>
         </div>
     </footer>
 
